--- a/Vr3/style.css
+++ b/Vr3/style.css
@@ -77,10 +77,10 @@ a {
   }
 
 .centered {  
-    font-size: 1.5vw; 
+    font-size:100%; 
     position: absolute;
-    bottom: 58%;    
-    left:3%;
+    bottom: 63%;    
+    left:10%;
   }
 
   /* .header_image {
