--- a/Vr3/style.css
+++ b/Vr3/style.css
@@ -78,8 +78,8 @@ a {
 
 .centered {  
     font-size:100%; 
-    position: absolute;
-    bottom: 63%;    
+    position: relative;
+    bottom: 75%;    
     left:10%;
   }
 
