--- a/Vr3/style.css
+++ b/Vr3/style.css
@@ -79,8 +79,8 @@ a {
 .centered {  
     font-size:100%; 
     position: relative;
-    bottom: 75%;    
-    left:10%;
+    text-align: center;
+    bottom: 75%;   
   }
 
   /* .header_image {
