--- a/Amsterdam/style.css
+++ b/Amsterdam/style.css
@@ -189,7 +189,7 @@ img.transparent {
         margin-right: auto;       
         display: flex;
         flex-direction: row;
-        justify-content: left;
+        justify-content: center;
     }
 
 
