--- a/Amsterdam/style.css
+++ b/Amsterdam/style.css
@@ -1,12 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Trirong:ital,wght@1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
+
 * {
    padding-left: auto;
     padding-right: auto;
     margin-left: 7px;
     margin-right: 5px;
+    font-family: "Trirong", sans-serif;
 }
 
 h1 {
-    text-shadow: .2em .2em .5em black;   
+    text-shadow: .2em .2em .5em black;    
 }
 
 h2 {
@@ -122,9 +128,9 @@ img.transparent {
     transform: translate(-50%, -50%);
     text-align: center;
     font-size: 50px;
+    font-family: "Sofia", sans-serif;
     color: white;
     padding-top: 50px;
-    font-family: "Sofia", sans-serif;
 }
 
 
