--- a/Eindopdracht HTML&CSS/style.css
+++ b/Eindopdracht HTML&CSS/style.css
@@ -1,24 +1,40 @@
+body {
+    font: 20px/1.5 Roboto;
+    text-align: center;
+
+}
+
+h2 {
+    text-align: center;
+}
+
 label {
     font-weight: bold;
     font-size: xx-large;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-body {
-    font: 20px/1.5 Roboto, Brush Script MT;
-    color: blueviolet;
-}
-
 nav {
     background-color: rgb(131, 237, 237);
-
 }
 
 ul {
     display: none;
     list-style: none;
+    flex-direction: row;
     margin: 0;
-    padding: 0;
+    padding: 0;     
+}
+
+li {
+    border-right: 2px solid rgb(251, 247, 247);
+    padding-left: 10px;
+    padding-right: 0;
+    margin-left: 0;
+}
+
+li:last-child {
+    border-right: none;
 }
 
 a:any-link {
@@ -28,74 +44,180 @@ a:any-link {
     text-decoration: none;
 }
 
+.active {
+    background-color: #042baa;
+    color: #f5f5f5;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 20px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 18px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 /* als het venster breder dan 760px is moeten
  de li-items zichtbaar worden */
- 
- #menu-toggle {
-     display: none;
-    }
-    
-    /* selecteer <ul> sibling van <input> met de status checked en 
+
+#menu-toggle {
+    display: none;
+}
+
+/* selecteer <ul> sibling van <input> met de status checked en 
     maak dat element zichtbaar door het de initiele waarde te geven */
-    input:checked~ul {
-        display: initial;
-    }
-    
-    form{
-        background: #fff;
-        display: flex;
-        flex-direction: column;
-        padding: 2vw 4vw;
-        width: 90%;
-        max-width: 600px;
-        border-radius: 10px;
-    }
-    
-    form h3{
-        color: #555;
-        font-weight: 800;
-        margin-bottom: 20px;
-    }
-    
-    form input, form textarea{
-        border: 0;
-        margin: 10px 0;
-        padding: 20px;
-        outline: none;
-        background: #f5f5f5;
-        font-size: 16px;
-    }
-    
-    form button{
-        padding: 15px;
-        background: #ff5361;
-        color: #fff;
-        font-size: 16px;
-        border: 0;
-        outline: none;
-        cursor: pointer;
-        width: 150px;
-        margin: 20px auto 0;
-        border-radius: 30px;
-        
+input:checked~ul {
+    display: initial;
+}
+
+img {
+    height: 200px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+form {
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    padding: 2vw 4vw;
+    width: 90%;
+    max-width: 600px;
+    border-radius: 10px;
+}
+
+form h3 {
+    color: #555;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
+form input,
+form textarea {
+    border: 0;
+    margin: 10px 0;
+    padding: 20px;
+    outline: none;
+    background: #f5f5f5;
+    font-size: 16px;
+}
+
+form button {
+    padding: 15px;
+    background: #ff5361;
+    color: #fff;
+    font-size: 16px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    width: 150px;
+    margin: 20px auto 0;
+    border-radius: 30px;
+
+}
+
+.w3-center .w3-bar {
+    align-items: center;
+    display: inline-block;
+    width: auto;
+  }
+
+  .w3-black,
+  .w3-hover-black:hover {
+    color: #fff !important;
+    background-color: #000 !important;
+  }
+
+  .w3-xlarge {
+    font-size: 24px !important;
+  }
+
+  .w3-section,
+.w3-code {
+  margin-top: 16px !important;
+  margin-bottom: 16px !important;
+}
+
+.w3-padding-64 {
+    padding-top: 64px !important;
+    padding-bottom: 64px !important;
+  }
+
+
+
+  .w3-opacity,
+.w3-hover-opacity:hover {
+  opacity: 0.6;
+}
+
+.w3-opacity-off,
+.w3-hover-opacity-off:hover {
+  opacity: 1;
+}
+
+
+
+
+
+
+@media screen and (min-width: 760px) {
+    #ul {       
+        display: flex;  
+        flex-direction: column;     
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        gap: 0.5em;
     }
 
-    
-    @media screen and (min-width: 760px) {
-        ul {
-            display: flex;
-            gap: 0.5em;
-        }
-    
-        /* Om display intial te overschrijven met :none moet de checked 
+    /* Om display intial te overschrijven met :none moet de checked 
     selector in deze @media query worden opgenomen ,
     met de attibuut selector wordt het label onzichtbaar gemaakt*/
-    
-        :is(input:checked ~ ul, ul) {
-            display: flex;
-        }
-    
-        [for="menu-toggle"] {
-            display: none;
-        }
+
+    :is(input:checked ~ ul, ul) {
+        display: flex;
     }
+
+    [for="menu-toggle"] {
+        display: none;
+    }
+}
