--- a/Eindopdracht HTML&CSS/style.css
+++ b/Eindopdracht HTML&CSS/style.css
@@ -1,223 +1,245 @@
 body {
-    font: 20px/1.5 Roboto;
-    text-align: center;
-
+  width: 100%;
+  margin: 0;
+  font: 20px/1.5 Roboto;  
+  text-align: center;
+  
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
+}
+ 
+
+/* Add a black background color to the top navigation */
+.topnav {  
+  background-color: #333;
+  overflow: hidden;
 }
 
-label {
-    font-weight: bold;
-    font-size: xx-large;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-nav {
-    background-color: rgb(131, 237, 237);
-}
-
-ul {
-    display: none;
-    list-style: none;
-    flex-direction: row;
-    margin: 0;
-    padding: 0;     
-}
-
-li {
-    border-right: 2px solid rgb(251, 247, 247);
-    padding-left: 10px;
-    padding-right: 0;
-    margin-left: 0;
-}
-
-li:last-child {
-    border-right: none;
-}
-
-a:any-link {
-    color: inherit;
-    display: inline-block;
-    padding: 0.75em 0.25em;
-    text-decoration: none;
-}
-
+/* Add an active class to highlight the current page */
 .active {
-    background-color: #042baa;
-    color: #f5f5f5;
+  background-color: #d40707;
+  color: white;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
 }
 
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
+.topnav a.split {
+  float: right;
+  background-color: #04AA6D;
+  color: white;
 }
 
+/* Dropdown container - needed to position the dropdown content */
 .dropdown {
-    float: left;
-    overflow: hidden;
+  float: left;
+  overflow: hidden;
 }
 
+/* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
-    font-size: 20px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 18px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 16px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 }
 
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
 
+/* Style the links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a dark background on topnav links and the dropdown button on hover */
+.topnav a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+/* Add a grey background to dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: #ddd;
+  background-color: #ddd;
+  color: black;
 }
 
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
 .dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* als het venster breder dan 760px is moeten
- de li-items zichtbaar worden */
-
-#menu-toggle {
-    display: none;
-}
-
-/* selecteer <ul> sibling van <input> met de status checked en 
-    maak dat element zichtbaar door het de initiele waarde te geven */
-input:checked~ul {
-    display: initial;
+  display: block;
 }
 
 img {
-    height: 200px;
+  width: 100%;
 }
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.logo {
+  width: 100px;
 }
 
 form {
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    padding: 2vw 4vw;
-    width: 90%;
-    max-width: 600px;
-    border-radius: 10px;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 2vw 4vw;
+  width: 90%;
+  max-width: 600px;
+  border-radius: 10px;
 }
 
 form h3 {
-    color: #555;
-    font-weight: 800;
-    margin-bottom: 20px;
+  color: #555;
+  font-weight: 800;
+  margin-bottom: 20px;
 }
 
 form input,
 form textarea {
-    border: 0;
-    margin: 10px 0;
-    padding: 20px;
-    outline: none;
-    background: #f5f5f5;
-    font-size: 16px;
+  border: 0;
+  margin: 10px 0;
+  padding: 20px;
+  outline: none;
+  background: #f5f5f5;
+  font-size: 16px;
 }
 
 form button {
-    padding: 15px;
-    background: #ff5361;
-    color: #fff;
-    font-size: 16px;
-    border: 0;
-    outline: none;
-    cursor: pointer;
-    width: 150px;
-    margin: 20px auto 0;
-    border-radius: 30px;
+  padding: 15px;
+  background: #ff5361;
+  color: #fff;
+  font-size: 16px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  width: 150px;
+  margin: 20px auto 0;
+  border-radius: 30px;
 
 }
 
-.w3-center .w3-bar {
-    align-items: center;
-    display: inline-block;
-    width: auto;
-  }
-
-  .w3-black,
-  .w3-hover-black:hover {
-    color: #fff !important;
-    background-color: #000 !important;
-  }
-
-  .w3-xlarge {
-    font-size: 24px !important;
-  }
-
-  .w3-section,
-.w3-code {
-  margin-top: 16px !important;
-  margin-bottom: 16px !important;
+.footer {  
+  width: 100%;  
+  background-color: #333;
+  color: #fff; 
 }
 
-.w3-padding-64 {
-    padding-top: 64px !important;
-    padding-bottom: 64px !important;
+.footer a {
+  color: #f2f2f2;
+  text-decoration: none;
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+}
+
+.footer-nav {
+  grid-column: 1 / span 1;
+  display: flex;
+ 
+}
+
+.footer-menu :hover {
+  background-color: #555;
+  color: white;
+}
+
+.footer-menu {  
+  list-style: none;
+  display: flex;  
+}
+
+.footer-menu li {  
+  margin: 0px 7px;   
+}
+
+.footer-copyright {
+  grid-column: 3 / span 1;
+  text-align: left;
+}
+
+
+
+
+
+
+
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+
+  .topnav a:not(:first-child),
+  .dropdown .dropbtn {
+    display: none;
   }
 
-
-
-  .w3-opacity,
-.w3-hover-opacity:hover {
-  opacity: 0.6;
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 }
 
-.w3-opacity-off,
-.w3-hover-opacity-off:hover {
-  opacity: 1;
-}
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
 
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 
+  .topnav.responsive .dropdown {
+    float: none;
+  }
 
+  .topnav.responsive .dropdown-content {
+    position: relative;
+  }
 
-
-@media screen and (min-width: 760px) {
-    #ul {       
-        display: flex;  
-        flex-direction: column;     
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        gap: 0.5em;
-    }
-
-    /* Om display intial te overschrijven met :none moet de checked 
-    selector in deze @media query worden opgenomen ,
-    met de attibuut selector wordt het label onzichtbaar gemaakt*/
-
-    :is(input:checked ~ ul, ul) {
-        display: flex;
-    }
-
-    [for="menu-toggle"] {
-        display: none;
-    }
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
 }
