--- a/Eindopdracht HTML&CSS/style.css
+++ b/Eindopdracht HTML&CSS/style.css
@@ -1,18 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Trirong:wght@1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
+:root {
+  --text-color: white;
+  --border-color: #ddd;
+}
+
 body {
-  width: 100%;
-  margin: 0;
-  font: 20px/1.5 Roboto;  
+  font: 20px/1.5 Roboto;
   text-align: center;
-  
+  font-family: "Trirong", sans-serif;
 }
 
 h2 {
   text-align: center;
 }
- 
+
 
 /* Add a black background color to the top navigation */
-.topnav {  
+.topnav {
   background-color: #333;
   overflow: hidden;
 }
@@ -21,28 +27,30 @@ h2 {
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: var(--text-color);
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 14px;
   text-decoration: none;
   font-size: 17px;
+  font-family: "Audiowide", sans-serif;
 }
 
 /* Add an active class to highlight the current page */
 .active {
   background-color: #d40707;
-  color: white;
+  color: var(--text-color);
 }
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
   display: none;
+  text-align: left;
 }
 
 .topnav a.split {
   float: right;
-  background-color: #04AA6D;
-  color: white;
+  background-color: #04aa3e;
+  color: var(--text-color);
 }
 
 /* Dropdown container - needed to position the dropdown content */
@@ -51,16 +59,18 @@ h2 {
   overflow: hidden;
 }
 
+
 /* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
   font-size: 17px;
   border: none;
   outline: none;
-  color: white;
+  color: var(--text-color);
   padding: 16px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  font-family: "Audiowide", Audiowide;
 }
 
 /* Style the dropdown content (hidden by default) */
@@ -71,6 +81,7 @@ h2 {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+
 }
 
 /* Style the links inside the dropdown */
@@ -80,14 +91,14 @@ h2 {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 
 /* Add a dark background on topnav links and the dropdown button on hover */
 .topnav a:hover,
 .dropdown:hover .dropbtn {
   background-color: #555;
-  color: white;
+  color: var(--text-color);
 }
 
 /* Add a grey background to dropdown links on hover */
@@ -96,27 +107,98 @@ h2 {
   color: black;
 }
 
-/* Show the dropdown menu when the user moves the mouse over the dropdown button */
-.dropdown:hover .dropdown-content {
+.show {
   display: block;
 }
+
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+/* .dropdown:hover .dropdown-content {
+  display: block;
+} */
+
+.logo {
+  height: 20px;
+}
+
 
 img {
   width: 100%;
 }
 
-.logo {
+.foto {
   width: 100px;
 }
 
-form {
-  background: #fff;
+.text-container {
+  display: flex;
+}
+
+.text-column {
+  width: 50%;
+  padding: 20px;
+}
+
+.image-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-gap: 20px;
+  margin-left: auto;
+  margin-right: 1%;
+}
+
+.item {
+  display: flex;
+}
+
+.item-3 {
+  margin-bottom: 20px;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.item img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  padding: 10px;
+}
+
+.image-container-large {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-gap: 20px;
+  padding-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.large {
   display: flex;
   flex-direction: column;
-  padding: 2vw 4vw;
-  width: 90%;
-  max-width: 600px;
-  border-radius: 10px;
+  background-color: lightblue;
+  padding-top: 20px;
+}
+
+iframe {
+  width: 95%;
+}
+
+.large-2 {
+  padding-left: 5%;
+  padding-right: 3%;
+}
+
+.large p {
+  font-size: 18px;
+  color: rgb(10, 10, 10);
+}
+
+.large img {
+  max-width: 90%;
+  height: 300px;
+  padding-left: 5%;
 }
 
 form h3 {
@@ -125,112 +207,204 @@ form h3 {
   margin-bottom: 20px;
 }
 
-form input,
-form textarea {
-  border: 0;
-  margin: 10px 0;
-  padding: 20px;
-  outline: none;
-  background: #f5f5f5;
-  font-size: 16px;
+hr {
+  width: 100%;
+  margin: 20px 0;
+  border: 1px solid #ccc;
 }
 
-form button {
-  padding: 15px;
-  background: #ff5361;
-  color: #fff;
-  font-size: 16px;
-  border: 0;
-  outline: none;
+form {
+  padding: 5px;
+  background-color: #f2f2f2;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 95vh;
+  border: 2px solid var(--border-color);
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10%;
+}
+
+input[type="text"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type="email"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+[id="message"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+input[type="submit"] {
+  width: 40%;
+  background-color: #4CAF50;
+  color: var(--text-color);
+  padding: 14px 10px;
+  margin: 8px 0;
+  margin-bottom: 8px;
+  border: none;
+  border-radius: 20px;
   cursor: pointer;
-  width: 150px;
-  margin: 20px auto 0;
-  border-radius: 30px;
-
 }
 
-.footer {  
-  width: 100%;  
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+table {
+  text-align: center;
+  border-collapse: collapse;
+  /* voegt de randen samen tot 1 rand */
+  box-shadow: 0 1px 1px hsl(0 0% 0% / 0.25),
+    0 2px 2px hsl(0 0% 0% / 0.20),
+    0 4px 4px hsl(0 0% 0% / 0.15),
+    0 8px 8px hsl(0 0% 0% / 0.10),
+    0 16px 16px hsl(0 0% 0% / 0.05);
+  margin: 2rem 0;
+  padding: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+colgroup>col {
+  background: #eeeeee;
+}
+
+colgroup>col:last-child {
+  background: #cccccc;
+}
+
+/*hier staat: selecteer elk element td of th dat niet leeg is*/
+:is(td, th):not(:empty) {
+  border: 1px solid black;
+  padding: 4px;
+  text-align: center;
+}
+
+.footer {
+  width: 100%;
   background-color: #333;
-  color: #fff; 
+  color: var(--text-color);
+  ;
 }
 
 .footer a {
-  color: #f2f2f2;
+  color: var(--text-color);
+  ;
   text-decoration: none;
+  font-family: "Audiowide", sans-serif;
 }
 
 .footer-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .footer-nav {
   grid-column: 1 / span 1;
   display: flex;
- 
+
 }
 
 .footer-menu :hover {
   background-color: #555;
-  color: white;
+  color: var(--text-color);
+  ;
 }
 
-.footer-menu {  
+.footer-menu {
   list-style: none;
-  display: flex;  
+  display: flex;
 }
 
-.footer-menu li {  
-  margin: 0px 7px;   
+.footer-menu li {
+  margin: 0px 7px;
 }
 
-.footer-copyright {
+.footer-contact {
+  list-style: none;
   grid-column: 3 / span 1;
-  text-align: left;
+  padding-top: 18px;
 }
 
+/* When the screen is less than 768 pixels wide, hide all links. 
+Show the link that contains should open and close the topnav (.icon) */
+/* Smartphone (320px - 767px) */
+@media only screen and (max-width: 767px) {
 
-
-
-
-
-
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-
-  .topnav a:not(:first-child),
+  .topnav a,
   .dropdown .dropbtn {
     display: none;
   }
 
   .topnav a.icon {
-    float: right;
+    float: left;
     display: block;
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon.
+ This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media only screen and (max-width: 767px) {
+  * {
+    margin-right: 0px;
+    margin-left: 0px;
+    padding-left: 1px;
+    padding-right: 1px;
+  }
+
+
   .topnav.responsive {
+    display: block;
     position: relative;
   }
 
   .topnav.responsive a.icon {
     position: absolute;
-    right: 0;
+    left: 0;
     top: 0;
+  }
+
+  .logo {
+    width: 30px;
+    height: 30px;
   }
 
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
   }
 
   .topnav.responsive .dropdown {
     float: none;
+    text-align: left;
   }
 
   .topnav.responsive .dropdown-content {
@@ -242,4 +416,186 @@ form button {
     width: 100%;
     text-align: center;
   }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  .text-container {
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    margin-right: auto;
+  }
+
+  div.text-column {
+    width: 90%;
+  }
+
+  .image-container {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: 5%;
+  }
+
+  .img {
+    width: 100%;
+  }
+
+
+  video {
+    width: 100%;
+    height: fit-content;
+    padding-left: 10px;
+  }
+
+  .large-2 {
+    padding-left: 5%;
+    padding-bottom: 1%;
+  }
+
+  iframe {
+    width: 97%;
+    height: 300px;
+  }
+
+  .image-container-large {
+    display: flex;
+    flex-direction: column;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  table {
+    font-size: 0.5em;
+    overflow-x: scroll;
+  }
+
+}
+
+/* Tablet (768px - 1023px) */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+
+  div.text-column {
+    width: 100%;
+  }
+
+  .image-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: 2%;
+  }
+
+  .item-1 {
+    width: 30%;
+    height: 100%;
+  }
+
+  .item-2 {
+    width: 30%;
+    height: 70%;
+  }
+
+  .item-3 {
+    width: 29%;
+    margin-bottom: 20px;
+  }
+
+  video {
+    width: 110%;
+    height: auto;
+  }
+
+  .item-4 {
+    width: 48%;
+  }
+
+  .item-5 {
+    width: 48%;
+  }
+
+  .image-container-large {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: 1%;
+  }
+
+  .large-1 {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    padding-bottom: 2%;
+  }
+
+  .large-1 p {
+    display: grid;
+    margin: 0;
+    text-align: right;
+    justify-content: center;
+  }
+
+  .large-2 {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    padding-bottom: 2%;
+  }
+
+  .large-2 iframe {
+    grid-column-start: 2;
+    grid-row-start: 1;
+    height: 320px;
+    justify-self: end;
+  }
+
+  .large-2 p {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    margin: 0;
+    justify-self: start;
+  }
+
+  .large-3 {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    padding-bottom: 2%;
+  }
+
+  .large img p {
+    width: 100%;
+    margin-right: 15px;
+  }
+}
+
+
+/* Everything (1440px and above) */
+@media only screen and (min-width: 1440px) {
+
+  #menu {
+    display: flex;
+  }
+
+  #article {
+    font-size: 25px;
+  }
+
+  .container {
+    height: 20%;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+  }
+
+
+
 }
